<resources>
    <string name="app_name">B07 Assignment</string>
    <string name="tab_text_1">Your Account</string>
    <string name="tab_text_2">Shop</string>
    <string name="tab_text_3">Check Out</string>
    <string name="prompt_email">ID</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_new_account">Create a new Account</string>
    <string name="action_make_new_account">Create a new Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password"></string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_new_account">new_account</string>
    <string name="intDb">Click Here to create Admin Account and Initilize Database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Username</string>
    <string name="nav_header_subtitle">Type of Account</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="view_inventory">View Current Inventory</string>
    <string name="add_employee">Add Employee</string>
    <string name="create_customer">Add Customer</string>
    <string name="set_inventory">Set Inventory</string>
    <string name="your_orders">Your Orders</string>
    <string name="log_out">Log Out</string>
    <string name="cart">Go to Cart</string>
    <string name="add_item">Add Item</string>
    <string name="admin">Please Add Information for new Employee</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in_customer">Create Customer Account</string>
    <string name="customer">Please Enter Information to Create New Customer</string>
    <string name="promote">"Promote Employee"</string>
    <string name="your_account">"My Account"</string>
    <string name="hockey_stick_quantity">0</string>
    <string name="fishing_rod_quantity">0</string>
    <string name="skates_quantity">0</string>
    <string name="running_shoes">0</string>
    <string name="protein_bar_quantity">0</string>
</resources>
